--- a/css/main.css
+++ b/css/main.css
@@ -4,8 +4,14 @@
   font-family: 'roboto';
   margin: 0;
   padding: 0;
+  color: white;
+  font-size: 10px;
 }
 
+a:hover,
+i:hover{
+  color: red;
+}
 /* DEBUG:  */
 
 .red{
@@ -65,7 +71,33 @@
 
 /* BEGIN TOP BAR */
 #top-bar{
-  width: 100%;
+  text-align: center;
+  padding: 10px 0 20px 0;
+}
+
+#top-bar .right-bar{
+  position: absolute;
+  top: 4px;
+  right: 10px;
+}
+
+#top-bar .speaker{
+  display: inline-block;
+  background-color: rgba(155, 164, 182,0.4);
+  padding: 3px;
+  border-radius: 3px;
+}
+
+#top-bar .speaker a {
+  text-decoration: none;
+}
+
+#top-bar .full-screen{
+  display: inline-block;
+  margin-left: 4px;
+  background-color: rgba(155, 164, 182,0.4);
+  padding: 3px;
+  border-radius: 3px;
 }
 
 /* END TOP BAR */
@@ -108,7 +140,6 @@
   position: absolute;
   left: 0;
   bottom: 0;
-  color: white;
   background-color: rgba(0, 0, 0, 0.7);
   border-radius: 0 2px 0 0;
 }
@@ -122,8 +153,6 @@
   justify-content: space-between;
   background-color: #232326;
   width: 100%;
-  color: white;
-  font-size: 10px;
 }
 
 #cta li{
